--- a/grpcdogfood/client/chart/templates/deployment.yaml
+++ b/grpcdogfood/client/chart/templates/deployment.yaml
@@ -7,10 +7,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.fullname }}
-  {{- with .Values.namespace }}
-  namespace:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -33,21 +30,12 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          args:
+            - -server_hostname={{ $.Values.server.hostname }}
+            - -server_port={{ $.Values.server.port }}
           ports:
             - name: grpc
-              containerPort: 50051
+              containerPort: {{ $.Values.client.port }}
               protocol: TCP
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-      {{- with .Values.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
