--- a/grpcdogfood/server/chart/templates/deployment.yaml
+++ b/grpcdogfood/server/chart/templates/deployment.yaml
@@ -15,7 +15,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: 50051
+      targetPort: {{ .Values.server.port }}
       protocol: TCP
       name: grpc
   selector:
@@ -25,19 +25,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Values.fullname }}
-  {{- with .Values.namespace }}
-  namespace:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+  namespace: {{ .Values.namespace }}
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.fullname }}
-  {{- with .Values.namespace }}
-  namespace:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -61,21 +55,12 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          args:
+            - -server_port={{ $.Values.server.port }}
           ports:
             - name: grpc
-              containerPort: 50051
+              containerPort: {{ .Values.server.port }}
               protocol: TCP
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-      {{- with .Values.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+
