--- a/grpcdogfood/Makefile
+++ b/grpcdogfood/Makefile
@@ -1,4 +1,4 @@
-.PHONY: dogfood-go-client dogfood-go-server
+.PHONY: dogfood-go-client dogfood-go-server restart-client restart-server restart
 
 # Get the currently used golang install path (in GOPATH/bin, unless GOBIN is set)
 ifeq (,$(shell go env GOBIN))
