--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -252,14 +252,14 @@ jobs:
             protoc --proto_path=. --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative disruptionlistener.proto
       - run: git diff --exit-code ':!go.*'
 
-  # ensures that the grpc protobuf files genereated by grpcdogfood/chaosdogfood/chaosdogfood.proto are up to date
+  # ensures that the grpc protobuf files genereated by dogfood/chaosdogfood/chaosdogfood.proto are up to date
   chaosdogfood-protobuf:
     executor: golang
     steps:
       - checkout
       - run:
           command: |
-            cd grpcdogfood/chaosdogfood
+            cd dogfood/chaosdogfood
             apt-get update
             apt-get install unzip -y
             PROTOC_VERSION=3.17.3
