--- a/examples/complete.yaml
+++ b/examples/complete.yaml
@@ -72,12 +72,12 @@ spec:
   grpc: # disrupt gRPC responses by faking results
     port: 50051 # port that target grpc server is listening on
     endpoints:
-      - endpoint: /chaos_dogfood.ChaosDogfood/getCatalog # gRPC service endpoint to disrupt
+      - endpoint: /chaosdogfood.ChaosDogfood/getCatalog # gRPC service endpoint to disrupt
         error: NOT_FOUND # gRPC error code to return instead computed response
         queryPercent: 10 # percentage to affect (1-100); multiple alterations allowed for single endpoint, but sum should not exceed 100%
-      - endpoint: /chaos_dogfood.ChaosDogfood/order # gRPC service endpoint to disrupt
+      - endpoint: /chaosdogfood.ChaosDogfood/order # gRPC service endpoint to disrupt
         override: "{}" # response structure to return instead of computed response - currently only returns emptypb.Empty
         queryPercent: 50 # percentage to affect (1-100); multiple alterations allowed for single endpoint, but sum should not exceed 100%
-      - endpoint: /chaos_dogfood.ChaosDogfood/order # gRPC service endpoint to disrupt
+      - endpoint: /chaosdogfood.ChaosDogfood/order # gRPC service endpoint to disrupt
         error: PERMISSION_DENIED # gRPC error code to return instead computed response
         # unspecified queryPercent: an endpoint with Y[1], Y[2],...Y[X] explicit queryPercent and Y[X+1],...Y[X+N] other alterations defaults to (100 - SUM(Y[1] +..+ Y[X])) / N %
