[CHAOS-195] Containerize gRPC Dogfood Service & add Helm charts (#461)
* grpc dogfood helm chart

* minimize

* license & service tweaks

* .

* use container arguments for gRPC dogfood port / hostname

* .

* reuse chaos-demo namespace

* remove old namespace

* add .PHONY

* grpcdogfood/ -> dogfood/

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ bin/chaosli/chaosli_darwin_amd64
 bin/chaosli/chaosli_darwin_amd64.sha256sum
 chart/install.yaml
 cli/chaosli/cmd/pkged.go
+dogfood/bin
 out
 dist
 
