[CHAOS-195] Containerize gRPC Dogfood Service & add Helm charts (#461)
* grpc dogfood helm chart

* minimize

* license & service tweaks

* .

* use container arguments for gRPC dogfood port / hostname

* .

* reuse chaos-demo namespace

* remove old namespace

* add .PHONY

* grpcdogfood/ -> dogfood/

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ bin/handler/handler
 bin/chaosli/chaosli.tar.gz
 bin/chaosli/chaosli_darwin_amd64
 bin/chaosli/chaosli_darwin_amd64.sha256sum
+dogfood/bin
 cli/chaosli/cmd/pkged.go
 out
 dist
