--- a/dogfood/server/chart/templates/deployment.yaml
+++ b/dogfood/server/chart/templates/deployment.yaml
@@ -7,10 +7,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.fullname }}
-  {{- with .Values.namespace }}
-  namespace:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+  namespace: {{ .Values.namespace }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -19,7 +16,7 @@ spec:
       protocol: TCP
       name: grpc
   selector:
-    {{- include "deploy.selectorLabels" . | nindent 4 }}
+    app: {{ .Values.fullname }}
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -36,11 +33,11 @@ spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      {{- include "deploy.selectorLabels" . | nindent 6 }}
+      app: {{ .Values.fullname }}
   template:
     metadata:
       labels:
-        {{- include "deploy.selectorLabels" . | nindent 8 }}
+        app: {{ .Values.fullname }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
