update manifests and gofmt

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -293,15 +293,15 @@ spec:
                 to manually ignore the other safety nets they do not want considered
                 If IgnoreAll is true by default, the user can change its value
               properties:
-                ignoreCountToLarge:
+                ignoreAll:
+                  type: boolean
+                ignoreCountNotToLarge:
                   type: boolean
                 ignoreNoPortOrHost:
                   type: boolean
                 ignoreSpecificContainDisk:
                   type: boolean
                 ignoreSporadicTargets:
-                  type: boolean
-                "on":
                   type: boolean
               type: object
             selector:
