Updating K8s api endpoints to be v1.22.x compatible
- Update CRD
- Update kubebuilder references
- Update Charts

--- a/chart/templates/webhook.yaml
+++ b/chart/templates/webhook.yaml
@@ -8,7 +8,7 @@
 {{- $altName2 := "chaos-controller-webhook-service.chaos-engineering.svc.cluster.local" }}
 {{- $cert := genSignedCert $cn nil (list $altName1 $altName2) 3650 $ca }}
 ---
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
   annotations:
@@ -29,6 +29,8 @@ webhooks:
       path: /validate-chaos-datadoghq-com-v1beta1-disruption
   failurePolicy: Fail
   name: chaos-controller-webhook-service.chaos-engineering.svc
+  sideEffects: NoneOnDryRun
+  admissionReviewVersions: ["v1", "v1beta1"]
   rules:
   - apiGroups:
     - chaos.datadoghq.com
@@ -41,7 +43,7 @@ webhooks:
     resources:
     - disruptions
 ---
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   annotations:
@@ -62,6 +64,8 @@ webhooks:
       path: /mutate-chaos-datadoghq-com-v1beta1-disruption
   failurePolicy: Fail
   name: chaos-controller-webhook-service.chaos-engineering.svc
+  sideEffects: NoneOnDryRun
+  admissionReviewVersions: ["v1", "v1beta1"]
   rules:
   - apiGroups:
       - chaos.datadoghq.com
@@ -72,7 +76,7 @@ webhooks:
     resources:
       - disruptions
 ---
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   annotations:
@@ -93,6 +97,8 @@ webhooks:
       path: /mutate-v1-pod-chaos-handler-init-container
   failurePolicy: Ignore
   name: chaos-controller-admission-webhook.chaos-engineering.svc
+  sideEffects: NoneOnDryRun
+  admissionReviewVersions: ["v1", "v1beta1"]
   objectSelector:
     matchExpressions:
       - key: "chaos.datadoghq.com/disrupt-on-init"
@@ -107,7 +113,7 @@ webhooks:
     resources:
     - pods
 ---
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   annotations:
@@ -128,6 +134,8 @@ webhooks:
       path: /mutate-chaos-datadoghq-com-v1beta1-disruption-user-info
   failurePolicy: Fail
   name: chaos-controller-admission-webhook.chaos-engineering.svc
+  sideEffects: NoneOnDryRun
+  admissionReviewVersions: ["v1", "v1beta1"]
   rules:
   - apiGroups:
     - "chaos.datadoghq.com"
