--- a/tasks/requirements.txt
+++ b/tasks/requirements.txt
@@ -1,3 +1,3 @@
-git+git://github.com/bbqsrc/spdx-python@v2.5
-git+git://github.com/bbqsrc/spdx-lookup-python@v0.3.2
+git+https://github.com/bbqsrc/spdx-python@v2.5
+git+https://github.com/bbqsrc/spdx-lookup-python@v0.3.2
 invoke==1.4.1
