--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,9 @@ bin/handler/handler
 bin/chaosli/chaosli.tar.gz
 bin/chaosli/chaosli_darwin_amd64
 bin/chaosli/chaosli_darwin_amd64.sha256sum
-dogfood/bin
+chart/install.yaml
 cli/chaosli/cmd/pkged.go
+dogfood/bin
 out
 dist
 
