--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,12 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: 1.17.x
+      - name: Install Helm
+        uses: azure/setup-helm@v1
+        with:
+          version: v3.6.3
+      - name: Generate install manifest
+        run: helm template ./chart/ --set images.controller=datadog/chaos-controller:${GITHUB_REF_NAME} --set images.injector=datadog/chaos-injector:${GITHUB_REF_NAME} --set images.handler=datadog/chaos-handler:${GITHUB_REF_NAME} > ./chart/install.yaml
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v1
         with:
