--- a/examples/pulse.yaml
+++ b/examples/pulse.yaml
@@ -14,7 +14,7 @@ spec:
     app: demo-curl
   count: 1
   pulse: # optional, activate pulsing disruptions. Available for any disruptions except nodeFailure and containerFailure
-    activeDuration: 60s # this is the duration of the disruption in an active state, must be a valid time.Duration string, e.g. (300s, 15m25s, 4h) and must be greater than 250ms
-    dormantDuration: 20s # this is the duration of the disruption in a dormant state, must be a valid time.Duration string, e.g. (300s, 15m25s, 4h) and must be greated than 250ms
+    activeDuration: 60s # this is the duration of the disruption in an active state, must be a valid time.Duration string, e.g. (300s, 15m25s, 4h) and must be greater than 500ms
+    dormantDuration: 20s # this is the duration of the disruption in a dormant state, must be a valid time.Duration string, e.g. (300s, 15m25s, 4h) and must be greater than 500ms
   network:
     drop: 100
