Dont attempt to reinject after duration has expired
Add PreviouslyInjected to enum validation

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -334,6 +334,7 @@ spec:
               - NotInjected
               - PartiallyInjected
               - Injected
+              - PreviouslyInjected
               type: string
             isInjected:
               type: boolean
