--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -285,30 +285,28 @@ spec:
               type: object
             onInit:
               type: boolean
-            safeMode:
-              description: SafemodeSpec represents a spec with a switch turning safemode
-                on and all safety net switches to turn off IgnoreAll, by default,
-                is defined by the cluster the controller is running on If the use
-                is running on a cluster that has IgnoreAll as false, they will have
-                to manually ignore the other safety nets they do not want considered
-                If IgnoreAll is true by default, the user can change its value
-              properties:
-                ignoreAll:
-                  type: boolean
-                ignoreCountNotToLarge:
-                  type: boolean
-                ignoreNoPortOrHost:
-                  type: boolean
-                ignoreSpecificContainDisk:
-                  type: boolean
-                ignoreSporadicTargets:
-                  type: boolean
-              type: object
             selector:
               additionalProperties:
                 type: string
               description: Set is a map of label:value. It implements Labels.
               nullable: true
+              type: object
+            unsafeMode:
+              description: UnsafemodeSpec represents a spec with paramters to turn
+                off specific safety nets designed to catch common traps or issues
+                running a disruption All of these are turned off by default, so disabling
+                safety nets requires manually changing these booleans to true
+              properties:
+                disableAll:
+                  type: boolean
+                disableCountTooLarge:
+                  type: boolean
+                disableNeitherHostNorPort:
+                  type: boolean
+                disableSpecificContainDisk:
+                  type: boolean
+                disableSporadicTargets:
+                  type: boolean
               type: object
           required:
           - count
