[CHAOS-122] Implement pulsing disruptions (#473)
* [CHAOS-122] Implement pulsing disruptions

* [CHAOS-122] Add new method to injector to get the injected disruption type

* [CHAOS-122] Update tests and add pulsing to chaosli

* [CHAOS-122] Linting

* [CHAOS-122] Remove useless tests and modify the minimum duration in pulse

* [CHAOS-122] Update select to use timer, remove useless fields in pulse example

* [CHAOS-122] lint

* [CHAOS-122] Exit on clean up error

* [CHAOS-122] Exit on clean up error

* [CHAOS-122] Update on logic

* [CHAOS-122] Update on error handling

* [CHAOS-122] Update on error handling

* [CHAOS-122] Lint

* [CHAOS-122] Update on clean and inject

--- a/examples/complete.yaml
+++ b/examples/complete.yaml
@@ -31,6 +31,9 @@ spec:
     - demo
     - demo2
   count: 1 # number of pods to target or a percentage (1% - 100%)
+  pulse: # optional, activate pulsing disruptions. Available for any disruptions except nodeFailure and containerFailure
+    activeDuration: 60s # this is the duration of the disruption in an active state, must be a valid time.Duration string, e.g. (300s, 15m25s, 4h) and must be greater than 500ms
+    dormantDuration: 30s # this is the duration of the disruption in a dormant state, must be a valid time.Duration string, e.g. (300s, 15m25s, 4h) and must be greater than 500ms
   duration: 30m # the amount of time before the disruption terminates itself, must be a valid time.Duration string, e.g. (300s, 15m25s, 4h)
   nodeFailure: # node kernel panic or shutdown
     shutdown: true # optional, shutdown the host instead of triggering a stack dump (defaults to false)
