--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -297,6 +297,19 @@ spec:
               type: object
             onInit:
               type: boolean
+            pulse:
+              description: DisruptionPulse contains the active disruption duration
+                and the dormant disruption duration
+              nullable: true
+              properties:
+                activeDuration:
+                  type: string
+                dormantDuration:
+                  type: string
+              required:
+              - activeDuration
+              - dormantDuration
+              type: object
             selector:
               additionalProperties:
                 type: string
