[CHAOS-122] Watch services and endpoints

--- a/chart/templates/injector_role.yaml
+++ b/chart/templates/injector_role.yaml
@@ -16,9 +16,14 @@ rules:
   - list
   - get
   - update
+  - watch
 - apiGroups:
   - ""
   resources:
   - services
+  - namespaces
   verbs:
+  - list
   - get
+  - update
+  - watch
