--- a/examples/demo.yaml
+++ b/examples/demo.yaml
@@ -3,6 +3,14 @@
 # This product includes software developed at Datadog (https://www.datadoghq.com/).
 # Copyright 2021 Datadog, Inc.
 
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: chaos-demo
+  labels:
+    name: chaos-demo
+---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
