--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,6 +125,7 @@ jobs:
           name: Ensure dependencies are up-to-date
           command: |
             go mod tidy
+            go mod vendor
             git diff --exit-code
   # this will fail if changes in packages are checked into git but the updated manifests are not
   manifests:
@@ -214,8 +215,8 @@ jobs:
   third-party-licenses:
     executor: python
     steps:
-      - checkout
       - alpine_install_git
+      - checkout
       - python_install_requirements
       - run:
           name: Ensure 3rd-party licenses are up-to-date
@@ -225,8 +226,8 @@ jobs:
   license-header:
     executor: python
     steps:
-      - checkout
       - alpine_install_git
+      - checkout
       - python_install_requirements
       - run:
           name: Ensure license header is present
