--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -6,7 +6,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: chaos-controller
-  namespace: chaos-engineering
+  namespace: {{ .Values.chaosNamespace }}
 spec:
   replicas: 1
   selector:
