--- a/chart/templates/webhook.yaml
+++ b/chart/templates/webhook.yaml
@@ -4,8 +4,8 @@
 # Copyright 2021 Datadog, Inc.
 {{- $ca := genCA "chaos-controller-webhook-service-ca" 3650 }}
 {{- $cn := "chaos-controller-webhook-service" }}
-{{- $altName1 := "chaos-controller-webhook-service.chaos-engineering.svc" }}
-{{- $altName2 := "chaos-controller-webhook-service.chaos-engineering.svc.cluster.local" }}
+{{- $altName1 := printf "chaos-controller-webhook-service.%s.svc" .Values.chaosNamespace }}
+{{- $altName2 := printf "chaos-controller-webhook-service.%s.svc.cluster.local" .Values.chaosNamespace }}
 {{- $cert := genSignedCert $cn nil (list $altName1 $altName2) 3650 $ca }}
 ---
 apiVersion: admissionregistration.k8s.io/v1beta1
@@ -13,7 +13,7 @@ kind: ValidatingWebhookConfiguration
 metadata:
   annotations:
   {{- if not .Values.controller.webhook.generateCert }}
-    cert-manager.io/inject-ca-from: chaos-engineering/chaos-controller-serving-cert
+    cert-manager.io/inject-ca-from: {{ .Values.chaosNamespace }}/chaos-controller-serving-cert
   {{- end }}
   name: chaos-controller
 webhooks:
@@ -25,10 +25,10 @@ webhooks:
   {{- end }}
     service:
       name: chaos-controller-webhook-service
-      namespace: chaos-engineering
+      namespace: {{ .Values.chaosNamespace }}
       path: /validate-chaos-datadoghq-com-v1beta1-disruption
   failurePolicy: Fail
-  name: chaos-controller-webhook-service.chaos-engineering.svc
+  name: chaos-controller-webhook-service.{{ .Values.chaosNamespace }}.svc
   rules:
   - apiGroups:
     - chaos.datadoghq.com
@@ -46,7 +46,7 @@ kind: MutatingWebhookConfiguration
 metadata:
   annotations:
   {{- if not .Values.controller.webhook.generateCert }}
-    cert-manager.io/inject-ca-from: chaos-engineering/chaos-controller-serving-cert
+    cert-manager.io/inject-ca-from: {{ .Values.chaosNamespace }}/chaos-controller-serving-cert
   {{- end }}
   name: chaos-controller
 webhooks:
@@ -58,10 +58,10 @@ webhooks:
   {{- end }}
     service:
       name: chaos-controller-webhook-service
-      namespace: chaos-engineering
+      namespace: {{ .Values.chaosNamespace }}
       path: /mutate-chaos-datadoghq-com-v1beta1-disruption
   failurePolicy: Fail
-  name: chaos-controller-webhook-service.chaos-engineering.svc
+  name: chaos-controller-webhook-service.{{ .Values.chaosNamespace }}.svc
   rules:
   - apiGroups:
       - chaos.datadoghq.com
@@ -77,7 +77,7 @@ kind: MutatingWebhookConfiguration
 metadata:
   annotations:
   {{- if not .Values.controller.webhook.generateCert }}
-    cert-manager.io/inject-ca-from: chaos-engineering/chaos-controller-serving-cert
+    cert-manager.io/inject-ca-from: {{ .Values.chaosNamespace }}/chaos-controller-serving-cert
   {{- end }}
   name: chaos-controller-pod-chaos-handler
 webhooks:
@@ -89,10 +89,10 @@ webhooks:
   {{- end }}
     service:
       name: chaos-controller-webhook-service
-      namespace: chaos-engineering
+      namespace: {{ .Values.chaosNamespace }}
       path: /mutate-v1-pod-chaos-handler-init-container
   failurePolicy: Ignore
-  name: chaos-controller-admission-webhook.chaos-engineering.svc
+  name: chaos-controller-admission-webhook.{{ .Values.chaosNamespace }}.svc
   objectSelector:
     matchExpressions:
       - key: "chaos.datadoghq.com/disrupt-on-init"
@@ -112,7 +112,7 @@ kind: MutatingWebhookConfiguration
 metadata:
   annotations:
   {{- if not .Values.controller.webhook.generateCert }}
-    cert-manager.io/inject-ca-from: chaos-engineering/chaos-controller-serving-cert
+    cert-manager.io/inject-ca-from: {{ .Values.chaosNamespace }}/chaos-controller-serving-cert
   {{- end }}
   name: chaos-controller-disruption-user-info
 webhooks:
@@ -124,10 +124,10 @@ webhooks:
   {{- end }}
     service:
       name: chaos-controller-webhook-service
-      namespace: chaos-engineering
+      namespace: {{ .Values.chaosNamespace }}
       path: /mutate-chaos-datadoghq-com-v1beta1-disruption-user-info
   failurePolicy: Fail
-  name: chaos-controller-admission-webhook.chaos-engineering.svc
+  name: chaos-controller-admission-webhook.{{ .Values.chaosNamespace }}.svc
   rules:
   - apiGroups:
     - "chaos.datadoghq.com"
@@ -145,11 +145,11 @@ apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: chaos-controller-serving-cert
-  namespace: chaos-engineering
+  namespace: {{ .Values.chaosNamespace }}
 spec:
   dnsNames:
-    - chaos-controller-webhook-service.chaos-engineering.svc
-    - chaos-controller-webhook-service.chaos-engineering.svc.cluster.local
+    - chaos-controller-webhook-service.{{ .Values.chaosNamespace }}.svc
+    - chaos-controller-webhook-service.{{ .Values.chaosNamespace }}.svc.cluster.local
   issuerRef:
     kind: Issuer
     name: chaos-controller-selfsigned-issuer
@@ -159,7 +159,7 @@ apiVersion: cert-manager.io/v1alpha2
 kind: Issuer
 metadata:
   name: chaos-controller-selfsigned-issuer
-  namespace: chaos-engineering
+  namespace: {{ .Values.chaosNamespace }}
 spec:
   selfSigned: {}
 {{- else }}
@@ -169,7 +169,7 @@ kind: Secret
 type: kubernetes.io/tls
 metadata:
   name: chaos-controller-webhook-secret
-  namespace: chaos-engineering
+  namespace: {{ .Values.chaosNamespace }}
   labels:
     app: chaos-controller
 data:
