--- a/chart/templates/role_binding.yaml
+++ b/chart/templates/role_binding.yaml
@@ -6,7 +6,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: chaos-controller-leader-election-rolebinding
-  namespace: chaos-engineering
+  namespace: {{ .Values.chaosNamespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -14,7 +14,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: chaos-controller
-  namespace: chaos-engineering
+  namespace: {{ .Values.chaosNamespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -27,7 +27,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: chaos-injector
-  namespace: chaos-engineering
+  namespace: {{ .Values.chaosNamespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -40,7 +40,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: chaos-controller
-  namespace: chaos-engineering
+  namespace: {{ .Values.chaosNamespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -53,4 +53,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: chaos-controller
-  namespace: chaos-engineering
+  namespace: {{ .Values.chaosNamespace }}
