--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -6,7 +6,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: chaos-controller-metrics-service
-  namespace: chaos-engineering
+  namespace: {{ .Values.chaosNamespace }}
 spec:
   ports:
   - name: https
@@ -19,7 +19,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: chaos-controller-webhook-service
-  namespace: chaos-engineering
+  namespace: {{ .Values.chaosNamespace }}
 spec:
   ports:
   - port: 443
