--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -2,6 +2,7 @@
 # under the Apache License Version 2.0.
 # This product includes software developed at Datadog (https://www.datadoghq.com/).
 # Copyright 2021 Datadog, Inc.
+chaosNamespace: chaos-engineering # namespace where any resources get created.
 
 images: # images and tag to pull for each component of the stack
   controller: docker.io/library/chaos-controller:latest
@@ -33,7 +34,6 @@ controller:
 injector:
   annotations: {} # extra annotations passed to the chaos injector pods
   serviceAccount: chaos-injector # service account to use for the chaos injector pods
-  chaosNamespace: chaos-engineering # namespace where the service account can be found (NOTE: changing this will change the namespace in which the chaos pods are created)
   dnsDisruption: # dns disruption configuration
     dnsServer: "8.8.8.8" # IP address of the upstream dns server
     kubeDns: "off" # whether to use kube-dns for DNS resolution (off, internal, all)
