Fix global value.

--- a/chart/templates/service_account.yaml
+++ b/chart/templates/service_account.yaml
@@ -6,7 +6,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: chaos-controller
-  namespace: {{ .Values.global.namespace }}
+  namespace: {{ .Values.chaosNamespace }}
 ---
 apiVersion: v1
 kind: ServiceAccount
