--- a/chart/templates/service_account.yaml
+++ b/chart/templates/service_account.yaml
@@ -6,10 +6,10 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: chaos-controller
-  namespace: chaos-engineering
+  namespace: {{ .Values.chaosNamespace }}
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Values.injector.serviceAccount }}
-  namespace: {{ .Values.injector.chaosNamespace }}
+  namespace: {{ .Values.chaosNamespace }}
