fixing manifest inconsistencies

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -317,7 +317,7 @@ spec:
               nullable: true
               type: object
             unsafeMode:
-              description: UnsafemodeSpec represents a spec with paramters to turn
+              description: UnsafemodeSpec represents a spec with parameters to turn
                 off specific safety nets designed to catch common traps or issues
                 running a disruption All of these are turned off by default, so disabling
                 safety nets requires manually changing these booleans to true
