fixing typos and language

--- a/examples/disk_pressure_read_safemode.yaml
+++ b/examples/disk_pressure_read_safemode.yaml
@@ -13,8 +13,8 @@ spec:
   selector:
     app: demo-curl
   count: 1
-  safeMode: 
-    ignoreAll: false
+  unsafeMode:
+    disableAll: false
   containers:
     - dummy
   diskPressure:
