--- a/local/config.yaml
+++ b/local/config.yaml
@@ -1,3 +1,7 @@
+# Unless explicitly stated otherwise all files in this repository are licensed
+# under the Apache License Version 2.0.
+# This product includes software developed at Datadog (https://www.datadoghq.com/).
+# Copyright 2021 Datadog, Inc.
 controller:
   metricsBindAddr: "127.0.0.1:8080"
   leaderElection: false
