--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -27,6 +27,7 @@ data:
       imagePullSecrets: {{ .Values.images.pullSecrets }}
       defaultDuration: {{ .Values.controller.defaultDuration }}
       expiredDisruptionGCDelay: {{ .Values.controller.expiredDisruptionGCDelay }}
+      userInfoHook: {{ .Values.controller.userInfoHook }}
       webhook:
         {{- if .Values.controller.webhook.generateCert }}
         certDir: /tmp/k8s-webhook-server/serving-certs
