fix segmentation faults

--- a/examples/disk_pressure_read_unsafemode.yaml
+++ b/examples/disk_pressure_read_unsafemode.yaml
@@ -15,6 +15,7 @@ spec:
   count: 1
   unsafeMode:
     disableAll: false
+    disableSpecificContainDisk: true
   containers:
     - dummy
   diskPressure:
