feat: added flag to dynamic targeting

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -134,6 +134,8 @@ spec:
               type: boolean
             duration:
               type: string
+            dynamicTargeting:
+              type: boolean
             grpc:
               description: GRPCDisruptionSpec represents a gRPC disruption
               nullable: true
