removed disk pressure safety net, added disk pressure validation instead; added further configuration for safety nets; added reinitialization of safety nets for updated parameters in disruptions; removed sporadic targets

--- a/examples/disk_pressure_read_unsafemode.yaml
+++ b/examples/disk_pressure_read_unsafemode.yaml
@@ -14,9 +14,11 @@ spec:
     app: demo-curl
   count: 1
   unsafeMode:
-    disableSpecificContainDisk: true
-  containers:
-    - dummy
+    disableAll: false
+    config:
+      countTooLarge:
+        namespaceThreshold: 90
+        clusterThreshold: 90
   diskPressure:
     path: /mnt/data # mount point (in the pod) to apply throttle on
     throttling:
