--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -322,6 +322,24 @@ spec:
                 running a disruption All of these are turned off by default, so disabling
                 safety nets requires manually changing these booleans to true
               properties:
+                config:
+                  description: Config represents any configurable parameters for the
+                    safetynets, all of which have defaults
+                  properties:
+                    countTooLarge:
+                      description: CountTooLargeConfig represents the configuration
+                        for the countTooLarge safetynet
+                      properties:
+                        clusterThreshold:
+                          maximum: 100
+                          minimum: 0
+                          type: integer
+                        namespaceThreshold:
+                          maximum: 100
+                          minimum: 0
+                          type: integer
+                      type: object
+                  type: object
                 disableAll:
                   type: boolean
                 disableCountTooLarge:
