[CHAOS-164] Add pod logic + move tc filter and watcher logic to its own file

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -285,6 +285,16 @@ spec:
                 pods:
                   items:
                     properties:
+                      port:
+                        maximum: 65535
+                        minimum: 0
+                        type: integer
+                      protocol:
+                        enum:
+                        - tcp
+                        - udp
+                        - ""
+                        type: string
                       selector:
                         additionalProperties:
                           type: string
