--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -12,6 +12,7 @@ images: # images and tag to pull for each component of the stack
   pullSecrets: false # name of the secret object to use when pulling images
 
 controller:
+  debugMode: true
   deleteOnly: false # enable delete-only mode
   enableSafeguards: true # enable safeguards on targets selection (do not target the node running the controller)
   metricsSink: noop # metrics driver (noop or datadog)
@@ -36,6 +37,7 @@ injector:
   annotations: {} # extra annotations passed to the chaos injector pods
   labels: {} # extra labels passed to the chaos injector pods
   serviceAccount: chaos-injector # service account to use for the chaos injector pods
+  debugMode: true
   dnsDisruption: # dns disruption configuration
     dnsServer: "8.8.8.8" # IP address of the upstream dns server
     kubeDns: "off" # whether to use kube-dns for DNS resolution (off, internal, all)
