--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@
 *.dll
 *.so
 *.dylib
-bin/injector/injector
-bin/manager/manager
-bin/handler/handler
+bin/injector/injector*
+bin/manager/manager*
+bin/handler/handler*
 bin/chaosli/chaosli.tar.gz
 bin/chaosli/chaosli_darwin_amd64
 bin/chaosli/chaosli_darwin_amd64.sha256sum
