--- a/bin/manager/Dockerfile
+++ b/bin/manager/Dockerfile
@@ -1,7 +1,8 @@
 FROM gcr.io/distroless/static:nonroot as manager
 
 USER nonroot:nonroot
+ARG TARGETARCH
 
-COPY manager /usr/local/bin/manager
+COPY manager_${TARGETARCH} /usr/local/bin/manager
 
 ENTRYPOINT ["/usr/local/bin/manager"]
