--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ build:make:
   stage: build
   when: always
   script:
-    - apt-get install build-essential
+    - apt-get update && apt-get install build-essential
     - make
   artifacts:
     paths:
